--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -17,7 +17,7 @@
    }
    else
    {
-				<div style="text-align: right; color: rgb(182, 182, 182); position: relative; top: 30px;">
+				<div style="text-align: right; color: rgb(182, 182, 182); position: relative; top: 16px;">
 					<span class="loggedIn-nickname">@User.Identity.Name</span>
 					@using (Html.BeginForm( "LogOff", "Account", FormMethod.Post, new { id = "logoutForm" } ))
 	 {
@@ -27,16 +27,32 @@
 				</div> 
    }
 
-			<div style="font-size: 2em; color: rgb(252, 251, 250); text-align: center; padding-top: 80px;">
+			<div style="font-family: Raleway; font-weight: bold; font-size: 2em; color: rgb(253, 252, 248); text-align: center; margin-top: 160px;">
 				Twój osobisty kalendarz stworzony na miare Twoich potrzeb.
 			</div>
 
-			@Html.Partial( "_LobbyLoggedInBar" )
+			<div style="margin-bottom: 400px; font-family: Raleway-Regular;color:gray;text-align:center;">
+				<div style="display:inline-block;margin:10px;">
+				Strona Główna
+				</div>
+				<div style="display: inline-block; margin: 10px;">
+				Kalendarz
+				</div>
+				<div style="display: inline-block; margin: 10px;">
+				Dziennik
+				</div>
+			</div>
+
+			<div id="addPrivateEventBtn" class="add-btn hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
 
 			<div class="title-header">Tablica wydarzeń</div>
 
 			<div id="lobbyEventsMenuContainer">
-				<div style="min-height:100px;">
+				<div style="min-height: 140px;">
+					<div style="text-align: left;">
+						<div id="addPublicEventBtn" class="add-btn hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }">Stwórz publiczne wydarzenie +</div>
+					</div>
+
 					<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
 						<div class="border-item wydarzenia-border-tab"></div>
 						<div class="menu-item" data-eventkind="1">
@@ -134,6 +150,3 @@
 	</footer>
 
 </div>
-
-
-
