--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
@@ -6,7 +6,7 @@
 				<div data-bind="style: { color: kind.headerColor, width: '50%', padding: '10px', marginBottom: '10px' }">
 					<span data-bind="text: kind.name"></span>
 				</div>
-				<div class="event-block-content">
+				<div class="event-block-body">
 					<div><span data-bind="text: name, style: { fontSize: '2em', lineHeight: '1', paddingBottom: '4px' } "></span></div>
 					<div style="font-size: 1.4em; color: rgb(192, 187, 172);"><span>godzina: </span><span data-bind="text: startDate.formatZero(startDate.startHour)"></span><span>:</span><span data-bind="	text: startDate.formatZero(startDate.startMinute)"></span><span style="padding:0 4px;"> - </span>
 					<span data-bind="text: startDate.formatZero(startDate.endHour)"></span><span>:</span><span data-bind="	text: startDate.formatZero(startDate.endMinute)"></span></div>
