--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -1,152 +1,50 @@
-﻿<div class="lobby-content-container">
-	<div class="lobby-content-body">
-		<div id="lobby-menu-header" class="site-menu-header">
-			<div id="lobbyLogo">
-			</div>
+﻿<header class="lobby-header">
+	<div id="lobbyLogo">
+	</div>
 
-			@if (!Request.IsAuthenticated)
-   {
-				<div id="loginLinkContainer">
-					<span data-bind="click: showLoginFormOnClick" id="loginSpanLink" class="login-link link">Zaloguj sie</span>
-					<span id="registerSpanLink" data-bind="click: showRegisterFormOnClick" class="login-link link">Stwórz konto</span>
-				</div>
+	@if (Request.IsAuthenticated)
+ {
+		@Html.Partial( "_LobbyLoggedInBar" )			 
+ }
+ else
+ {
+		@Html.Partial( "_LobbyNotLoggedInBar" )			 
+ }
+</header>
 
-				@Html.Partial( "_Login", new KalendarzKarieryData.Models.AccountModels.LoginModel() )
-				@Html.Partial( "_Register", new KalendarzKarieryData.Models.ViewModels.RegisterViewModel() )
-			 
-   }
-   else
-   {
-				<div style="text-align: right; color: rgb(182, 182, 182); position: relative; top: 16px;">
-					<span class="loggedIn-nickname">@User.Identity.Name</span>
-					@using (Html.BeginForm( "LogOff", "Account", FormMethod.Post, new { id = "logoutForm" } ))
-	 {
-						@Html.AntiForgeryToken()
-						<a style="color: rgb(255, 109, 109);" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>
-	 }
-				</div> 
-   }
-
-			<div style="font-family: Raleway; font-weight: bold; font-size: 2em; color: rgb(253, 252, 248); text-align: center; margin-top: 160px;">
-				Twój osobisty kalendarz stworzony na miare Twoich potrzeb.
-			</div>
-
-			<div style="margin-bottom: 400px; font-family: Raleway-Regular;color:gray;text-align:center;">
-				<div style="display:inline-block;margin:10px;">
-				Strona Główna
-				</div>
-				<div style="display: inline-block; margin: 10px;">
-				Kalendarz
-				</div>
-				<div style="display: inline-block; margin: 10px;">
-				Dziennik
-				</div>
-			</div>
-
-			<div id="addPrivateEventBtn" class="add-btn hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
-
-			<div class="title-header">Tablica wydarzeń</div>
-
-			<div id="lobbyEventsMenuContainer">
-				<div style="min-height: 140px;">
-					<div style="text-align: left;">
-						<div id="addPublicEventBtn" class="add-btn hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPublicEventPopupOnClick( $element, data, e ) }">Stwórz publiczne wydarzenie +</div>
-					</div>
-
-					<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-						<div class="border-item wydarzenia-border-tab"></div>
-						<div class="menu-item" data-eventkind="1">
-							<span>Wydarzenia</span>
-						</div>
-						<div class="menu-item-number-container">
-							<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[0].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[0].events.upcoming() : '-'"></div>
-							@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[1] ? $root.publicEventTreeCountBasedOnEventKind[1].events.old() : 0"></div>*@
-						</div>
-					</div>
-
-					<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-						<div class="border-item lekcje-border-tab"></div>
-						<div class="menu-item" data-eventkind="2">
-							<span>Lekcje</span>
-
-						</div>
-						<div class="menu-item-number-container">
-							<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[1].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[1].events.upcoming() : '-'"></div>
-							@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[2] ? $root.publicEventTreeCountBasedOnEventKind[2].events.old() : 0"></div>*@
-						</div>
-					</div>
-
-					<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-						<div class="border-item zajecia-border-tab"></div>
-						<div class="menu-item" data-eventkind="3">
-							<span>Zajęcia</span>
-						</div>
-						<div class="menu-item-number-container">
-							<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[2].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[2].events.upcoming() : '-'"></div>
-							@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[3] ? $root.publicEventTreeCountBasedOnEventKind[3].events.old() : 0"></div>*@
-						</div>
-					</div>
-
-					<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-						<div class="border-item szkolenia-border-tab"></div>
-						<div class="menu-item" data-eventkind="4">
-							<span>Szkolenia</span>
-
-						</div>
-						<div class="menu-item-number-container">
-							<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[3].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[3].events.upcoming() : '-'"></div>
-							@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[4] ? $root.publicEventTreeCountBasedOnEventKind[4].events.old() : 0"></div>*@
-						</div>
-					</div>
-
-					<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-						<div class="border-item kursy-border-tab"></div>
-						<div class="menu-item" data-eventkind="5">
-							<span>Kursy</span>
-
-						</div>
-						<div class="menu-item-number-container">
-							<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[4].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[4].events.upcoming() : '-'"></div>
-							@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[5] ? $root.publicEventTreeCountBasedOnEventKind[5].events.old() : 0"></div>*@
-						</div>
-					</div>
-
-					<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-						<div class="border-item spotkania-border-tab"></div>
-						<div class="menu-item" data-eventkind="6">
-							<span>Spotkania</span>
-
-						</div>
-						<div class="menu-item-number-container">
-							<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[5].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[5].events.upcoming() : '-'"></div>
-							@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[6] ? $root.publicEventTreeCountBasedOnEventKind[6].events.old() : 0">78</div>*@
-						</div>
-					</div>
-
-					<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
-						<div class="border-item inne-border-tab"></div>
-						<div class="menu-item" data-eventkind="7">
-							<span>Inne</span>
-
-						</div>
-						<div class="menu-item-number-container">
-							<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[6].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[6].events.upcoming() : '-'"></div>
-							@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[7] ? $root.publicEventTreeCountBasedOnEventKind[7].events.old() : 0"></div>*@
-						</div>
-					</div>
-				</div>
-
-				@Html.Partial( "_LobbyAllSelectedEventsList" )
-
-			</div>
+<div class="lobby-body">
+	<section id="lobbyQuoteAndNavSection">
+		<div id="lobbyQuoteContainer">
+			Twój osobisty kalendarz stworzony na miare Twoich potrzeb.
 		</div>
-		@Html.Partial( "_lobbyEventSummary" )
-		@Html.Partial( "_lobbyNews" )
-	</div>
-	<div style="height: 200px; width: 200px;">
-	</div>
-	<footer class="lobby-footer">
-		Kalendarz Kariery 2014, wszelkie prawa zastrzezone
-	</footer>
+		<nav id="lobbyNavContainer">
+			<div class="lobby-nav-link-container selected-nav-link">
+				<a href="#0">Strona Główna</a>
+			</div>
+			<div class="lobby-nav-link-container">
+				<a href="#1">Kalendarz</a>
+			</div>
+			<div class="lobby-nav-link-container">
+				<a href="#2">Dziennik</a>
+			</div>
+		</nav>
+	</section>
 
+	<div id="addPrivateEventBtn" class="add-btn hover-cursor-pointer" data-bind="click: function ( data, e ) { $root.showAddPrivateEventLobbyPopupOnClick( $element, data, e ) }">Dodaj do swojego kalendarza +</div>
+	<header class="title-header">Tablica wydarzeń</header>
+
+	<section id="lobbyTableOfEventsSection">
+		@Html.Partial( "_LobbyEventsMenuItems" )
+		@Html.Partial( "_LobbyAllSelectedEventsList" )
+	</section>
+
+	<section id="lobbyEventsDisplaySection">
+		@Html.Partial( "_LobbyEventsDisplay" )
+	</section>
+
+	@Html.Partial( "_LobbyNews" )
 </div>
+
+<footer class="lobby-footer">
+	Kalendarz Kariery 2015, wszelkie prawa zastrzezone
+</footer>
