--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
@@ -1,7 +1,6 @@
 ﻿<section id="detailsEventBlockList">
 	<div style="text-align: center; padding-bottom: 20px; background: rgb(226, 221, 202); overflow: hidden;" data-bind="foreach: detailsPageDayEvents()">
-		<div class="event-block-container">
-		<span style="display:none;" class="hidden-event-id" data-bind="text: id"></span>
+		<div class="event-block-container" data-bind="attr: { 'data-eventid': id }">
 			<div class="event-block hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
 				<div data-bind="style: { color: kind.headerColor, width: '50%', padding: '10px', marginBottom: '10px' }">
 					<span data-bind="text: kind.name"></span>
