--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsDisplay.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsDisplay.cshtml
@@ -1,7 +1,6 @@
 ﻿<header class="title-header">Nadchodzące wydarzenia</header>
 <div id="lobbyEventsDisplayListContainer" data-bind="foreach: publicEvents">
-	<div class="event-block-container" >
-		<span style="display: none;" class="hidden-event-id" data-bind="text: id"></span>
+	<div class="event-block-container" data-bind="attr: {'data-eventid': id}">
 		<div class="event-block hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
 			<div class="event-block-header" data-bind="style: { color: kind.headerColor }">
 				<span data-bind="text: kind.name"></span>
