--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -46,5 +46,5 @@
 </div>
 
 <footer class="lobby-footer">
-	Kalendarz Kariery 2015, wszelkie prawa zastrzezone
+	<span>Kalendarz Kariery 2015, wszelkie prawa zastrzezone</span>
 </footer>
